# ElevenDops

./: .env.example  .gcloudignore  .gitignore  .postman.json  Dockerfile  Dockerfile.cloudrun  Dockerfile.local  LICENSE  README.md  TEST_ERROR_REPORT.md  agent_dump.json  audit_results.txt  check_delete.py  check_import.py  check_sdk.py  check_sdk_2.py  check_sdk_3.py  check_sdk_4.py  check_sdk_5.py  cloudbuild.yaml  debug--check-api.py  debug--check-audio-sync.py  debug--diagnose-config.py  debug--verify-signed-url.py  debug_connectivity.py  debug_env.py  debug_import.py  debug_log.md  debug_parsing.py  doc_response.json  docker-compose.dev.yml  error.txt  final_results.xml  final_results_attempt_2.xml  final_results_attempt_3.xml  final_results_complete.xml  final_verification.txt  fix--import-gcs-audio.py  frontend_props_errors.txt  full_test_output.txt  (+32 more)
.streamlit/: config.toml
TODO/: agent-customization-features.md  docker-image--optimization-plan.md  needImprovement.md  todo--replace-hardcoded-doctor-id.md
backend/: __init__.py  config.py  main.py
deploy/: README.md  service.yaml
docs/: DEBUG_API_REFERENCE.md  DEPLOYMENT_PLAN.md  IMPLEMENTATION_ROADMAP.md  KIRO_POWERS_COMPREHENSIVE_GUIDE.md  LANGSMITH_DEBUG_INTEGRATION.md  LANGSMITH_QUICK_REFERENCE.md  LOCAL_DEVELOPMENT.md  MVP1_API_REFERENCE.md  MVP1_ARCHITECTURE.md  MVP1_IMPLEMENTATION_SUMMARY.md  MVP1_INDEX.md  MVP1_QUICK_REFERENCE.md  MVP1_SETUP_GUIDE.md  concept--bilingual-medical-audio.md  elevenlabs_pricing_strategy.md  guide--antigravity-features.md  index.md
langsmith-studio/: README--TW.md  README.md  package.json  pnpm-lock.yaml
reports/: API_TEST_REPORT.md  BACKEND_API_TEST_REPORT.md  IMPLEMENTATION_STATUS_REPORT.md  POSTMAN_COLLECTION_REPORT.md  deployment-suitability-analysis-2026-01-02.md  duplicate-content--analysis.md  report--iam-security-analysis.md  test-results--backend.md  top-multilingual-voices.md  v3-voice-collection.md  verified-voices-report.md  voice-search-results.md
scripts/: .server_jobs.json  README.md  README_SERVER_MANAGEMENT.md  backfill_audio_metadata.py  cleanup--elevenlabs-knowledge.py  diagnosis-output.txt  fetch_voice_info.py  fix_env_trailing_spaces.py  inspect_clean.py  inspect_elevenlabs_agent.py  inspect_firestore.py  inspect_to_file.py  list--elevenlabs-knowledge.py  manage_server.ps1  reconcile--elevenlabs-knowledge.py  run_dev.bat  run_dev.sh  search_multilingual_voices.py  start-backend.cmd  start-backend.ps1  start.sh  start_emulator.ps1  start_emulators.bat  start_emulators.sh  start_server.ps1  stop_server.ps1  sync_agent_language.py  test--audio-playback-diagnosis.py  test--elevenlabs-delete.py  test--minimal-signing.py  test_all_apis.ps1  test_all_apis.py  test_api.ps1  test_knowledge_api.py  verify_imports.py  verify_orphan_trigger.py  verify_reconcile_connection.py  verify_test_create.py
streamlit_app/: app.py  (+1 more)
(+519 files in other folders)
